# iri_finger_pointing

./: CMakeLists.txt  README.md  package.xml
cfg/: Reconfig_params.cfg
iri_finger_pointing/: CMakeLists.txt  package.xml
iri_finger_pointing/scripts/: mediapipe_hands_node.py
launch/: pointing_one_camera.launch  pointing_two_cameras.launch
scripts/: mediapipe_hands_node.py  mediapipe_hands_node_db.py
